[package]
name = "abc145"
version = "0.1.0"
authors = ["Tomoya Ishii <shi2gx@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
abc145-a = { alias = "a", problem = "https://atcoder.jp/contests/abc145/tasks/abc145_a" }
abc145-b = { alias = "b", problem = "https://atcoder.jp/contests/abc145/tasks/abc145_b" }
abc145-c = { alias = "c", problem = "https://atcoder.jp/contests/abc145/tasks/abc145_c" }
abc145-d = { alias = "d", problem = "https://atcoder.jp/contests/abc145/tasks/abc145_d" }
abc145-e = { alias = "e", problem = "https://atcoder.jp/contests/abc145/tasks/abc145_e" }
abc145-f = { alias = "f", problem = "https://atcoder.jp/contests/abc145/tasks/abc145_f" }

[[bin]]
name = "abc145-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc145-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc145-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc145-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc145-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc145-f"
path = "src/bin/f.rs"
[dependencies]
lazy_static = "=1.4.0"
proconio = { version = "=0.3.6", features = ["derive"] }
procon               = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_bicoef        = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_complex       = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_graph         = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_itertools     = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_math          = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_math_traits   = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_modint        = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_multiset      = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_segtree       = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_shortest_path = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_string        = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_unionfind     = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
