[package]
name = "abc151"
version = "0.1.0"
authors = ["Tomoya Ishii <shi2gx@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
abc151-a = { alias = "a", problem = "https://atcoder.jp/contests/abc151/tasks/abc151_a" }
abc151-b = { alias = "b", problem = "https://atcoder.jp/contests/abc151/tasks/abc151_b" }
abc151-c = { alias = "c", problem = "https://atcoder.jp/contests/abc151/tasks/abc151_c" }
abc151-d = { alias = "d", problem = "https://atcoder.jp/contests/abc151/tasks/abc151_d" }
abc151-e = { alias = "e", problem = "https://atcoder.jp/contests/abc151/tasks/abc151_e" }
abc151-f = { alias = "f", problem = "https://atcoder.jp/contests/abc151/tasks/abc151_f" }

[[bin]]
name = "abc151-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc151-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc151-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc151-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc151-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc151-f"
path = "src/bin/f.rs"
[dependencies]
lazy_static = "=1.4.0"
proconio = { version = "=0.3.6", features = ["derive"] }
procon             = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_segtree     = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_math_traits = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_unionfind   = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_multiset    = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_math        = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_complex     = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_modint      = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_input       = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
