[package]
name = "abc154"
version = "0.1.0"
authors = ["Tomoya Ishii <shi2gx@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
abc154-a = { alias = "a", problem = "https://atcoder.jp/contests/abc154/tasks/abc154_a" }
abc154-b = { alias = "b", problem = "https://atcoder.jp/contests/abc154/tasks/abc154_b" }
abc154-c = { alias = "c", problem = "https://atcoder.jp/contests/abc154/tasks/abc154_c" }
abc154-d = { alias = "d", problem = "https://atcoder.jp/contests/abc154/tasks/abc154_d" }
abc154-e = { alias = "e", problem = "https://atcoder.jp/contests/abc154/tasks/abc154_e" }
abc154-f = { alias = "f", problem = "https://atcoder.jp/contests/abc154/tasks/abc154_f" }

[[bin]]
name = "abc154-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc154-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc154-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc154-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc154-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc154-f"
path = "src/bin/f.rs"
[dependencies]
lazy_static = "=1.4.0"
proconio = { version = "=0.3.6", features = ["derive"] }
procon               = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_bicoef        = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_complex       = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_graph         = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_fft           = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_itertools     = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_math          = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_math_traits   = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_modint        = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_multiset      = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_ntt           = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_segtree       = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_shortest_path = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_string        = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
procon_unionfind     = { git = "https://github.com/Shirataki2/procon_rs", branch = "main" }
