[package]
name = "abc179"
version = "0.1.0"
authors = ["root"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc179-a",problem = "https://atcoder.jp/contests/abc179/<FIXME: screen name of the problem>"}
b = {name = "abc179-b",problem = "https://atcoder.jp/contests/abc179/<FIXME: screen name of the problem>"}
c = {name = "abc179-c",problem = "https://atcoder.jp/contests/abc179/<FIXME: screen name of the problem>"}
d = {name = "abc179-d",problem = "https://atcoder.jp/contests/abc179/<FIXME: screen name of the problem>"}
e = {name = "abc179-e",problem = "https://atcoder.jp/contests/abc179/<FIXME: screen name of the problem>"}
f = {name = "abc179-f",problem = "https://atcoder.jp/contests/abc179/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
proconio = "*"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc179-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc179-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc179-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc179-d"
path = "./src/bin/d.rs"

[[bin]]
name = "abc179-e"
path = "./src/bin/e.rs"

[[bin]]
name = "abc179-f"
path = "./src/bin/f.rs"
