[package]
name = "abc182"
version = "0.1.0"
authors = ["root"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc182-a",problem = "https://atcoder.jp/contests/abc182/<FIXME: screen name of the problem>"}
b = {name = "abc182-b",problem = "https://atcoder.jp/contests/abc182/<FIXME: screen name of the problem>"}
c = {name = "abc182-c",problem = "https://atcoder.jp/contests/abc182/<FIXME: screen name of the problem>"}
d = {name = "abc182-d",problem = "https://atcoder.jp/contests/abc182/<FIXME: screen name of the problem>"}
e = {name = "abc182-e",problem = "https://atcoder.jp/contests/abc182/<FIXME: screen name of the problem>"}
f = {name = "abc182-f",problem = "https://atcoder.jp/contests/abc182/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
proconio = "*"
num = "*"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc182-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc182-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc182-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc182-d"
path = "./src/bin/d.rs"

[[bin]]
name = "abc182-e"
path = "./src/bin/e.rs"

[[bin]]
name = "abc182-f"
path = "./src/bin/f.rs"
